--- a/index.html
+++ b/index.html
@@ -2,15 +2,42 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Exhange</title>
+	<link rel="stylesheet" type="text/css" href="https://bootswatch.com/4/flatly/bootstrap.min.css">
+	<title>ExChange</title>
 </head>
 <body>
-	<header>
-		
+	<header class="mb-5">
+		<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+			<div class="container">
+				<h1 class="navbar-brand text-center display-5">Exchange</h1>
+
+				<ul class="nav justify-content-end">
+					<li class="nav-item">
+						<a href="#" class="nav-link text-white">
+							API
+						</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
 	</header>
-	<main>
+	<main class="mt-3">
 		<div class="container">
-			
+			<div class="card">
+				<div class="card-body">
+					<form>
+						<div class="form-group">
+							<input type="text" placeholder="from currency..." value="" class="form-control" />
+						</div>
+						<div class="form-group">
+							<input type="text" placeholder="...to currency" value="" class="form-control" />
+						</div>
+						<div class="form-group">
+							<input type="submit" value="Convert" class="btn btn-outline-primary btn-block" />
+						</div>
+					</form>
+				</div>
+			</div>
 		</div>
 	</main>
 	<footer>
